workshop4/minio_cm.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minions
  labels:
    app: minio
