workshop4/minio_hsvc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minions
  labels:
    app: minio
    name: minio-hsvc
spec:
  clusterIP: None
  selector:
    app: minio
    name: minio-po
  ports:
    - name: minio-data
      port: 9090
      targetPort: 9090
    - name: minio-ui
      port: 9000
      targetPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minions
  labels:
    app: minio
    name: minio-svc
spec:
  type: ClusterIP
  selector:
    app: minio
    name: minio-po
  ports:
    - name: minio-data
      port: 9090
      targetPort: 9090
    - name: minio-ui
      port: 9000
      targetPort: 9000

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minions
  labels:
    app: minio
    name: minio-sts
spec:
  replicas: 3
  serviceName: minio-hsvc
  selector:
    matchLabels:
      app: minio
      name: minio-po
  volumeClaimTemplates:
  - metadata:
      name: data-vol
    spec:
      storageClassName: do-block-storage 
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      name: minio-po
      labels:
        app: minio
        name: minio-po
    spec:
      containers:
        - name: minio-container
          image: bitnami/minio:latest
          imagePullPolicy: IfNotPresent
          command:
          - minio
          - server
          - --address=:9000
          - --console-address=:9090
          - http://minio-sts-{0...2}.minio-hsvc.minions.svc.cluster.local/data
          ports:
          - name: minio-server
            containerPort: 9000
          - name: minio-data
            containerPort: 9090
          volumeMounts:
            - name: data-vol
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
